<resources>
    <string name="app_name">HBV601-team-12</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="login">Login</string>
    <string name="register_prompt">Don\'t have an account? Register</string>
    <string name="logout">Logout</string>
    <string name="home_welcome">Welcome to HomeFragment</string>

    <string name="profile_picture_desc">User Profile Picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="take_picture">Take Picture</string>
    <string name="create_group">Create Group</string>
    <string name="no_groups_message">You are not a member of any groups.</string>
    <string name="invite_info">Invite ID: %1$d / Group: %2$d</string>
    <string name="member_avatar_desc">Member Photo</string>



    <string name="menu_profile">Profile</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="username_format">%1$s</string>
    <string name="save_changes">Save Changes</string>

    <string name="group_name">Group Name</string>
    <string name="group_description">Description (optional)</string>
    <string name="group_tags">Tags: Tags</string>
    <string name="group_max_members">Max Members (optional)</string>
    <string name="is_admin">(Admin)</string>
    <string name="group_picture_desc">Group Picture</string>
    <string name="upload_group_picture">Upload Group Picture</string>
    <string name="take_group_picture">Take Group Picture</string>

    <string name="edit_group">Edit Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="leave_group">Leave Group</string>
    <string name="members">Members</string>
    <string name="change_group_picture">Change Group Picture</string>
    <string name="your_invites">Your Invites</string>
    <string name="view_invites">View Invites</string>
    <string name="no_events_found">No upcoming events</string>
    <string name="create_event">Create Event</string>
    <string name="events">Events</string>
    <string name="invite_user">Invite User</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="invitation_info">Invitation Info</string>

    <string name="event_name_hint">Event Name</string>
    <string name="event_description_hint">Event Description</string>
    <string name="start_date_time">Start Date and Time</string>
    <string name="end_date_time">End Date and Time</string>
    <string name="select_start_date_time">Select Start Date and Time</string>
    <string name="select_end_date_time">Select End Date and Time</string>
    <string name="save_event">Save Event</string>
    <string name="event_name_label">Event Name</string>
    <string name="event_description_label">Event Description</string>
    <string name="start_time_label">Start Time</string>
    <string name="event_duration_label">Duration</string>
    <string name="event_location_label">Location</string>
    <string name="participants">Participants</string>
    <string name="edit_event_title">Edit Event</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="post_comment">Comment</string>
    <string name="comments_list">Comment List</string>
    <string name="view_comments">View Comments</string>
    <string name="no_comments_yet">No comments yet.</string>

    <string name="date_time">Date/Time</string>
    <string name="duration">Duration</string>
    <string name="location">Location</string>
    <string name="join_event">Join Event</string>
    <string name="allow_user_invites">Allow user invites?</string>

    <string name="status_going">GOING</string>
    <string name="status_maybe">MAYBE</string>
    <string name="status_declined">CAN\'T GO</string>
    <string name="status_invited">INVITED</string>

    <string name="next_event">Your Next Event</string>
    <string name="no_upcoming_events">No upcoming events</string>
    <string name="upcoming_event">Upcoming Event</string>
</resources>