<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_group"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingBottom="16dp"/>

    <EditText
        android:id="@+id/groupNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/group_name"
        android:autofillHints="name"
        android:inputType="text"
        android:maxLength="50"
        android:padding="10dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/groupDescriptionInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/group_description"
        android:autofillHints="description"
        android:inputType="textMultiLine"
        android:minLines="2"
        android:maxLines="4"
        android:padding="10dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/groupMaxMembersInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/group_max_members"
        android:autofillHints="postalCode"
        android:inputType="number"
        android:padding="10dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:id="@+id/allowUserInvites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="12dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:text="@string/allow_user_invites"
            android:gravity="center"
            />


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchAllowUserInvites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/groupImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/group_picture_desc"
        android:src="@drawable/default_group_image"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/btnUploadGroupPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_group_picture"
        android:backgroundTint="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btnTakeGroupPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_group_picture"
        android:backgroundTint="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/createGroupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_group"
        android:backgroundTint="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:padding="12dp"/>
</LinearLayout>
