<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
>

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_vertical"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginBottom="4dp">

        <TextView
            android:id="@+id/inviteInfoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/invitation_info"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept" />

        <Button
            android:id="@+id/btnDecline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decline"
            android:layout_marginStart="8dp" />

    </LinearLayout>
</layout>
